--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+logging.level.org.springframework=info
+logging.level.org.techbrenda.budgetizer=trace
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
+spring.h2.console.enabled=true
+spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.security.user.name=techbrenda
+spring.security.user.password=apples
+
+#jwt.signing.key.secret=shh-its-a-secret
+#jwt.token.expiration.in.seconds=3600
