Created local dev app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.security.user.name=techbrenda
-spring.security.user.password=apples
+#spring.security.user.name=set in application-dev.properties
+#spring.security.user.password=set in application-dev.properties
 
-#jwt.signing.key.secret=shh-its-a-secret
-#jwt.token.expiration.in.seconds=3600
+#jwt.signing.key.secret=set in application-dev.properties
+#jwt.token.expiration.in.seconds=set in application-dev.properties
