--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.security.user.password=set in application-dev.properties
 
 #jwt.signing.key.secret=set in application-dev.properties
-#jwt.token.expiration.in.seconds=set in application-dev.properties
+#jwt.expiration.milliseconds=set in application-dev.properties
