Configured JWT properties to remove warning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework=info
-logging.level.org.techbrenda.budgetizer=trace
+logging.level.org.techbrenda.securelogin=trace
 logging.level.org.hibernate.sql=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -18,5 +18,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.security.user.name=set in application-dev.properties
 #spring.security.user.password=set in application-dev.properties
 
-#jwt.signing.key.secret=set in application-dev.properties
-#jwt.expiration.milliseconds=set in application-dev.properties
+#jwt.signing-secret=set in application-dev.properties
+jwt.expiration-milliseconds=600000
