--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #jwt.signing-secret=set in application-dev.properties
 jwt.expiration-milliseconds=600000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#spring.mail.username=set in application-dev.properties
+#spring.mail.password=set in application-dev.properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
